k8s/yaml/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: world
  namespace: world
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # k get ingressclass
  rules:
    - host: "world.universe.mine"
      http:
        paths:
          - path: /europe
            pathType: Prefix
            backend:
              service:
                name: europe
                port:
                  number: 80
          - path: /asia
            pathType: Prefix
            backend:
              service:
                name: asia
                port:
                  number: 80
